<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="txt_num1_string">primer valor</string>
    <string name="txt_num2_string">segundo valor</string>
    <string name="rb_sumar_string">Sumar</string>
    <string name="rb_restar_string">Restar</string>
    <string name="btb_calcular">Calcular</string>
    <string name="tv_resultado_string">Resultado</string>

</resources>